# rise

./: .envrc  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.workspace  Dockerfile  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  PR19_MIGRATION_SUMMARY.md  Procfile  Procfile.dev  README.md  RELEASING.md  book.toml  docker-compose.yml  entrypoint.sh  fix-imports-round2.sh  fix-imports.sh  index.html  logs.txt  mise.toml  renovate.json  rise.toml
rise-backend/: Cargo.toml  Dockerfile  Dockerfile.backend  entrypoint.sh
rise-backend/.sqlx/: query-024182e4423e96d587609272e0b1c13e61a62f7c516d6fe91ca28149159c26bf.json  query-03edc59248670b659c1e2ac00e59f3a2c3cf25d2fbb3625dd8ba176fb05e9723.json  query-06716da4c3d4d7c77a36845f771e0956a5ca98a1291073ee860c040d61f462e1.json  query-093e48c20e93abdf145edcc3baba716271e089ba5b3e865890e6838cfa400ca5.json  query-0a3e959b69aa10d7360df351c96230729834aefabf0e0251057bd5aa4e556d63.json  query-0a4e38309a35fcecb7be06f3cd24a9775eabf44da9b42ea64f9d0d597eb15216.json  query-0d7c8e6841cb034eb21d7e883559a06669a77db08ebca0364ba33d148a8b0920.json  query-11b8ee767c926311e6fb2a3ffc2b3015ae4e0ccb9a6c86e3c6afd5522b54f71b.json  query-1677b7f189ccc3f1c5c07b6a21e4042565505d2ed845b206736fafc140ae871b.json  query-178566578f97bdb9d90653e1f5f529bdf5932f1f5d0cc09359566a9c3dcf4f43.json  query-180da22cfaf48dcaa54274f5c6bc309457b8a7c22e75cf8e9e79fb4ad6df4abc.json  query-18239ca0c099e6b9ba0d0d7e02fc0ed5a619f1ffaab088e122e3c88853c0cfe5.json  query-188cfa4f7720e92a55f73ded06583a96f7377b939dc329cfbdea725b1e1a13f0.json  query-189062d83fdb22a851599bcf71304781319c23d69b492f3004c6a1a985f88d83.json  query-232a0fa5b802412d66407178d4c8e884d7c56e22b989cd031f72f9e6a2d2e38b.json  query-2410a00849f271ac0e7d0ceeac53935e3e8839228b346fd286c092d5330f9cca.json  query-292b4c80888c9e45f26acead4160c7a3e3f3f20f7719c38c134e45ecbafd1c0d.json  query-2b2efe9c33645b128a585d482852d1a38b15afe7dc2dc23dc3185f01ca139eaf.json  query-2de11eef5a1142d0c4554a1d5db6d49c2c2d4dab19650de3cb89d13d48d7a210.json  query-30bb4002c30102f16737918eb7f963579c204500479fb348725fcb1afc034a39.json  query-318e04423eac246501f2adeb55c9a056e4cbe97fe34b4f2f88eca25a4489f143.json  query-36b5920c6ed4bd12d317f6ba3bdc9bbfd5ea04fc828b65e8abf0ee0925e0ae0a.json  query-378366062453b44112b5929ef9f04aafbe596058e091e6f93f3bec640195558e.json  query-3bd2fae8e096d1854bd9e675fc7b01158595742664b44ea25bdeb97de966c093.json  query-3e977104f2e8666b2f2af4f92c14fa6566ad598abd4bf3dfb2c8b750abc5888f.json  query-3f5fb4f39d986d75d319529c7fd30f50c3c2e3fe8d233b0119101f6e19758380.json  query-43df3f3397443396e29deff6bb70c5f1397b41ee9826b7550872b92f022a2422.json  query-4540670e693ad1451f9039b7791222dd1786942bc968b69763087bbe8b3df5c2.json  query-46258ddb19705ca5cacea92aafc390dedf07a1dc04e10796d6e2ad0ce3e3da40.json  query-48a927bd260f712e87a1e6b178e493bc3d09b084b35a1dc02db0fcbf70f41faa.json  query-505e0b9afcd2bcafd67f82cb30c99d99f64389ca66945fe9b6ec34d8ac48c16d.json  query-51f7c3a8f789370bf1a181c84cc1acf62c6b2f95292a978dd9f1feca241dfa7e.json  query-599ff663be91ad687949fbedaf44b495cea87d10c87904c65181cd4fce7f456e.json  query-5b95e17d891b26a721192ac58e3a3072262987f472563c672082bf9fc7f77e2b.json  query-5d319cbf7f4d3eacffd2599c8e884f077609edb7295772c21373586489d8c604.json  query-5dc59081ab9e0f05eebb2fab54ff6782c3a3e1e1157af3343591f93c9eb8cfda.json  query-5f78967fbb453996a9bfffbd77039a1461656c7975199abd831aa00e7113d68b.json  query-5f81e24a4a409fe451048a4676543d7f7c7c46ce53614c35f50428b67296de64.json  query-5ffb3d217125417806de0a57a38a024041e2e8b529542f14c416e08df15ce46c.json  query-60f8a80ac1437dd70733128c44e85e83665cb5550f7b7eab6daaffbdf5abf063.json  (+76 more)
rise-backend/config/: default.toml  default.yaml  production.toml  production.yaml
rise-backend/config/test-yaml/: default.yaml
rise-backend/dev/dex/: config.yaml
rise-backend/migrations/: 20251203000003_create_projects.sql  20251203000005_add_active_deployment_to_projects.sql  20251204000003_add_deployment_lifecycle_states.sql  20251205000001_add_failed_termination_reason.sql  20251205000004_add_project_url.sql  20251206000002_add_http_port_to_deployments.sql  20251206000003_create_service_accounts.sql  20251209000002_create_env_vars.sql  20251211000001_add_project_snowflake_enabled.sql  20251211165107_create_snowflake_sessions.sql  20251211213717_add_idp_managed_to_teams.sql
rise-backend/src/: lib.rs  lib_tests.rs  main.rs  settings.rs  state.rs
rise-backend/src/auth/: cookie_helpers.rs  device.rs  group_sync.rs  handlers.rs  jwt.rs  jwt_signer.rs  middleware.rs  mod.rs  oauth.rs  routes.rs  snowflake_handlers.rs  snowflake_oauth.rs  snowflake_refresh_controller.rs  token_storage.rs
rise-backend/src/db/: deployments.rs  env_vars.rs  mod.rs  models.rs  projects.rs  service_accounts.rs  snowflake_sessions.rs  teams.rs  users.rs
rise-backend/src/deployment/: handlers.rs  mod.rs  models.rs  routes.rs  state_machine.rs  utils.rs
rise-backend/src/deployment/controller/: docker.rs  kubernetes.rs  mod.rs
rise-backend/src/ecr/: controller.rs  manager.rs
rise-backend/src/encryption/: mod.rs
rise-backend/src/encryption/providers/: aws_kms.rs  local.rs  mod.rs
rise-backend/src/env_vars/: handlers.rs  routes.rs
rise-backend/src/frontend/: mod.rs  routes.rs
rise-backend/src/oci/: client.rs  error.rs  mod.rs
rise-backend/src/project/: controller.rs  fuzzy.rs  handlers.rs  mod.rs  models.rs  routes.rs
rise-backend/src/registry/: handlers.rs  mod.rs  models.rs  routes.rs
rise-backend/src/registry/providers/: artifactory.rs  (+3 more)
rise-backend/src/team/: fuzzy.rs  handlers.rs  mod.rs  models.rs  routes.rs
rise-backend/src/workload_identity/: handlers.rs  models.rs  routes.rs
rise-backend/static/: dashboard.html  index.html
rise-backend/static/css/: app.css
rise-backend/static/js/: api.js  app.js  auth.js
rise-cli/: Cargo.toml
rise-cli/src/: backend.rs  config.rs  deploy.rs  deployment.rs  dev_oidc_issuer.rs  env.rs  login.rs  main.rs  project.rs  service_account.rs  team.rs
rise-cli/src/deployment/: core.rs  follow_ui.rs  mod.rs
rise-cli/src/login/: device_flow.rs  mod.rs  oauth_code.rs
(+1128 files in other folders)
