[package]
name = "rise-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
config = "0.15.19"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
pocketbase-sdk = "0.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
openssl = { version = "0.10.75", features = ["vendored"] }
