[package]
name = "rise-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
config = "0.15.19"
jsonwebtoken = "9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
oauth2 = "4.4"
openssl = { version = "0.10.75", features = ["vendored"] }
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.11"

# Registry dependencies
async-trait = "0.1"
base64 = "0.22"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ecr = "1.80"

# Deployment controller dependencies
bollard = "0.17"
futures-util = "0.3"

# OCI registry dependencies
oci-distribution = "0.11"
thiserror = "2.0"
