[package]
name = "rise-backend"
description = "Backend services for Rise platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
include = [
    "src/**/*",
    "migrations/**/*",
    "static/**/*",
    ".sqlx/**/*",
    "Cargo.toml",
]

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
config = "0.15.19"
jsonwebtoken = "9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
oauth2 = "4.4"
openssl = { version = "0.10.75", features = ["vendored"] }
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.11"
urlencoding = "2.1"

# Registry dependencies
async-trait = "0.1"
base64 = "0.22"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ecr = "1.80"
aws-sdk-kms = "1.80"
aws-sdk-sts = "1.80"

# Encryption dependencies
aes-gcm = "0.10"

# OAuth2 proxy dependencies
moka = { version = "0.12", features = ["sync"] }
base64ct = { version = "1.6", features = ["alloc"] }
sha2 = "0.10"

# Deployment controller dependencies
bollard = "0.17"
futures-util = "0.3"
kube = { version = "0.95", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }
rustls = { version = "0.23", features = ["ring"] }

# OCI registry dependencies
oci-distribution = "0.11"
thiserror = "2.0"

# Frontend dependencies
rust-embed = "8.0"
mime_guess = "2.0"
tera = "1.20"
