[package]
name = "rise-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rise"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
webbrowser = "1.0.2"
chrono = "0.4"
# OAuth2 and PKCE dependencies
sha2 = "0.10"
base64 = "0.22"
url = "2.5"
axum = "0.8"
rand = "0.8"
